[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/slimeBlue.png" type="Texture" id=1]
[ext_resource path="res://player/slimeBlue_squashed.png" type="Texture" id=2]
[ext_resource path="res://player/slimeBlue_blue.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Eneme.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Crawl",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2, 10.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 10.5 )

[node name="Eneme" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Crawl"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 3 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -14 )
shape = SubResource( 4 )

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( -23, 5.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( 23, 5.5 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
